# whiskey_alpha

./: Makefile  README.md
Whiskey_Manipulator/: Makefile
Whiskey_Manipulator/c_source/: main.c
Whiskey_Manipulator/rust_source/: Cargo.toml
Whiskey_Manipulator/rust_source/src/: build.rs  lib.rs
whiskey_cli/src/: main.rs
whiskey_python/: Cargo.toml
whiskey_python/src/: build.rs  lib.rs
whiskey_wine_api/: Cargo.toml
whiskey_wine_api/src/: lib.rs
