[package]
name = "whiskey_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pyo3 = "0.19.1"
whiskey_wine_api = {path = "../whiskey_wine_api"}
whiskey_manipulator = {path = "../Whiskey_Manipulator/rust_source"}
crossterm = "0.27.0"
